Fixed Scroll Animation Overflow X Bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 a{
